syntax = "proto3";
package gameMessageCore;
option go_package = "./messageGo/proto";


enum PlayerRespawnPoint{
  PlayerRespawnPointLcoal = 0;
  PlayerRespawnPointCity = 1;
  PlayerRespawnPointArea = 2;
}


// 容貌数据
message PlayerFeature {
  int32 eyebrow = 1; // 眉毛
  int32 mouth = 2; // 嘴型
  int32 eye = 3; // 眼镜
  int32 face = 4; // 脸型
  int32 hair = 5; // 头发
  int32 glove = 6; // 手套
  int32 clothes = 7; // 衣服/上衣
  int32 pants = 8; // 裤子
  int32 skin = 9;  // 肤色
}

message PlayerBaseData {
  int64  user_id = 1; 
  string name = 2;
  int32  role_id = 3;
  // 玩家性别
  // other=未知性别
  // male=男性
  // female=女性
  string gender = 5;
  string role_icon = 6;
  PlayerFeature feature = 7;
  // 引导记录字段
  bool guide = 8;
} 


enum TickOutType{
  TickOutTypeUnknown  = 0;
  // 服务关闭
  ServiceClose          = 1;
  // 重复登录
  RepeatSingIn          = 2;
  // 非法攻击速度
  IllegalAtkSpd         = 3;
}